adlatus-ci-cd/cd/deploy/base/modules/appointment-api/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-api-service
  namespace: adl
spec:
  $patch: replace
  selector:
    app: appointment-api
  ports:
    - $patch: replace
    - port: 8080
      targetPort: 8080
