adlatus-ci-cd/cd/deploy/base/modules/appointment-api/patches/ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointment-api-ingress
  namespace: adl
